# SPL-3

./: .env.example  .gitignore  API_SPECIFICATION.md  CLAUDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  Dockerfile  GETTING_STARTED.md  INDEX.md  QUICK_START.md  README.md  SESSION_COMPLETION_SUMMARY.md  SYSTEM_ANALYSIS.md  SYSTEM_VALIDATION_REPORT.md  TEST_CASES.md  USAGE_GUIDE.md  alembic.ini  archery_scoring_system_spec.md  archery_webapp_spec.md  docker-compose.yml  pyproject.toml  pytest.ini  setup_db.py  test_output.txt  test_results.txt
.claude/: settings.local.json
aidlc-docs/: DEPLOYMENT_READINESS_SUMMARY.md  aidlc-state.md  audit.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_missing_fields.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
scripts/: __init__.py  seed_data.py
src/: __init__.py  cache.py  config.py  database.py  dependencies.py  events.py  main.py  schemas.py  security.py  thread_pool.py
src/api/: __init__.py  auth.py  cameras.py  health.py  leaderboards.py  reports.py  scores.py  sessions.py  tournaments.py  users.py  websocket.py
src/middleware/: __init__.py  error_handling.py  jwt_validation.py  rate_limit.py
src/models/: __init__.py  audit.py  base.py  camera.py  scoring.py  tournament.py  user.py
src/services/: __init__.py  arrow_detection_service.py  auth_service.py  camera_service.py  health_service.py  image_service.py  leaderboard_service.py  report_service.py  scoring_service.py
tests/: __init__.py  conftest.py  scratch_algorithm.py  scratch_area_test.py  scratch_debug_arrows.py  scratch_debug_vis.py  scratch_diagnose_current.py  scratch_ellipse_test.py  scratch_merging_test.py  scratch_test.py  test_api_endpoints.py  test_services.py
(+90 files in other folders)
