[tool.poetry]
name = "archery-backend"
version = "0.1.0"
description = "Automated Archery Scoring System Backend API"
authors = ["Development Team <dev@archery.local>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
PyJWT = "^2.8.0"
passlib = {version = "^1.7.0", extras = ["bcrypt"]}
bcrypt = "^4.1.0"
python-multipart = "^0.0.6"
opencv-python = "^4.8.0"
Pillow = "^10.0.0"
structlog = "^24.1.0"
alembic = "^1.12.0"
requests = "^2.31.0"
aiofiles = "^23.2.0"
python-dotenv = "^1.0.0"
reportlab = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.0"
black = "^23.9.0"
ruff = "^0.10.0"
mypy = "^1.5.0"
sqlalchemy-stubs = "^0.4.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
